// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circular dependency 1`] = `
"Not all files could be compiled due to circular dependency


        All files: [
  \\"conduit_a.cdt\\",
  \\"conduit_b.cdt\\"
]


        Resolved: []
        "
`;

exports[`dependency multi file 1`] = `
Object {
  "conduit_a.proto": "
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required m1 m = 1;
}
        ",
}
`;

exports[`dependency subdirs 1`] = `
Object {
  "conduit_a.proto": "
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_d.proto": "
        import \\"sub/conduit_c.proto\\";

        
        
message D {
	required m2 d = 1;
}
        ",
  "sub/conduit_b.proto": "
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required m1 m = 1;
}
        ",
  "sub/conduit_c.proto": "
        import \\"conduit_a.proto\\";
import \\"sub/conduit_b.proto\\";

        
        
message m2 {
	required m1 m1 = 1;
	required m2 m2 = 2;
}
        ",
}
`;

exports[`simple multi file 1`] = `
Object {
  "conduit_a.proto": "
        

        
        
message m1 {
	required double d = 1;
}
        ",
  "conduit_b.proto": "
        import \\"conduit_a.proto\\";

        
        
message m2 {
	required double d = 1;
}


message m1 {
	required m2 m = 1;
}
        ",
}
`;

exports[`subdir isn't referenced in present dir 1`] = `"Cannot find imported file conduit_c.cdt from file conduit_b.cdt"`;
